--- a/views/pages/dashboard/partials/sideBar.twig
+++ b/views/pages/dashboard/partials/sideBar.twig
@@ -16,7 +16,7 @@
 		<div class="w-full border-t border-b-gray-200 mb-2"></div>
 
 		{% if currentPath == '/technicians' %}
-			<button id="createUser" class="py-2 px-4 rounded-lg text-md font-bold text-gray-800 bg-blue-100 hover:bg-blue-600 hover:text-gray-100 cursor-pointer gap-5 text-center">
+			<button id="createBtn" class="py-2 px-4 rounded-lg text-md font-bold text-gray-800 bg-blue-100 hover:bg-blue-600 hover:text-gray-100 cursor-pointer gap-5 text-center">
 				Créer un utilisateur
 			</button>
 		{% endif %}
@@ -28,7 +28,7 @@
 		{% endif %}
 
 		{% if currentPath == '/tools' %}
-			<a href="/createTools" class="py-2 px-4 rounded-lg text-md font-bold text-gray-800 bg-blue-100 hover:bg-blue-600 hover:text-gray-100 cursor-pointer gap-5 text-center">
+			<a id="createToolBtn" class="py-2 px-4 rounded-lg text-md font-bold text-gray-800 bg-blue-100 hover:bg-blue-600 hover:text-gray-100 cursor-pointer gap-5 text-center">
 				Créer un outils
 			</a>
 		{% endif %}
