--- a/views/pages/dashboard/partials/tableDashboard.twig
+++ b/views/pages/dashboard/partials/tableDashboard.twig
@@ -1,9 +1,10 @@
+
 <div class="overflow-x-auto">
 	<table class="w-full border-separate border-spacing-y-3 ">
 
 		<thead>
 			<tr>
-				<th class="th-table {{currentPath == '/tools' ? 'w-3/10' : 'w-5/10'}}">
+				<th class="th-table w-5/10">
 					Outillage
 				</th>
 				{% if currentPath == '/tools'%}
@@ -11,20 +12,15 @@
 						Date de fin de validité
 					</th>
 				{% endif %}
-				<th class="th-table {{currentPath == '/tools' ? 'w-3/20' : 'w-2/10'}}">
+				<th class="th-table w-2/10">
 					Nom
 				</th>
-				<th class="th-table {{currentPath == '/tools' ? 'w-3/20' : 'w-2/10'}}">
+				<th class="th-table w-2/10">
 					Prénom
 				</th>
 				<th class="th-table w-1/10">
 					Aéronef
 				</th>
-				{% if currentPath == '/tools'%}
-					<th class="th-table w-1/10">
-						Actions
-					</th>
-				{% endif %}
 			</tr>
 		</thead>
 
@@ -36,26 +32,14 @@
 						{{tool.name}}
 					</td>
 					<td class="td-table">
-						Dupont
+						{{tool.user.lastName}}
 					</td>
 					<td class="td-table">
-						Jean
+						{{tool.user.firstName}}
 					</td>
-					<td class="td-table {{currentPath == '/tools' ? '' : 'rounded-r-lg'}}">
+					<td class="td-table rounded-r-lg">
 						FMEAE
 					</td>
-					{% if currentPath == '/tools'%}
-						<td class="td-table rounded-r-lg">
-							<div class="flex gap-2 justify-center">
-								<div class="bg-gray-50 p-2 rounded-full border-1 border-gray-400 hover:bg-blue-200 cursor-pointer editUserBtn">
-									<img class="w-5" src="/assets/images/editer.png" alt="">
-								</div>
-								<a class="bg-gray-50 p-2 rounded-full border-1 border-gray-400 hover:bg-blue-200" href="/deleteTool/{{tool.id}}">
-									<img class="w-5" src="/assets/images/supprimer.png" alt="">
-								</a>
-							</div>
-						</td>
-					{% endif %}
 				</tr>
 			{% endfor %}
 
@@ -63,3 +47,4 @@
 
 	</table>
 </div>
+
