--- a/views/pages/dashboard/partials/sideBar.twig
+++ b/views/pages/dashboard/partials/sideBar.twig
@@ -8,8 +8,8 @@
 			<img class="w-6" src={{currentPath == '/technicians' ? "/assets/images/utilisateur_blanc.png" : '/assets/images/utilisateur.png'}} alt="">
 			Mécaniciens
 		</a>
-		<a href="/tools" class={{currentPath == '/tools' ? 'sidebar-button-active' : 'sidebar-button'}}>
-			<img class="w-6" src={{currentPath == '/tools' ? "/assets/images/reparation_blanc.png" : '/assets/images/reparation.png'}} alt="">
+		<a href="/tools" class={{currentPath == '/tools' or perception ? 'sidebar-button-active' : 'sidebar-button'}}>
+			<img class="w-6" src={{currentPath == '/tools' or perception ? "/assets/images/reparation_blanc.png" : '/assets/images/reparation.png'}} alt="">
 			Outils
 		</a>
 
