--- a/views/pages/dashboard/partials/technicians.twig
+++ b/views/pages/dashboard/partials/technicians.twig
@@ -11,7 +11,7 @@
 		<div class="border border-gray-300 shadow-lg shadow-blue-100 rounded-2xl flex gap-6 py-6 px-7 card" data-technician-id="{{technician.id}}" data-last-name="{{technician.lastName}}" data-first-name="{{technician.firstName}}" data-email="{{technician.email}}" data-aeronef="{{technician.aeronef.immat}}">
 
 			<div>
-				<img class="w-24 h-24 p-2 rounded-full object-cover" src="" alt="">
+				<img class="w-24 h-24 p-2 rounded-full object-cover" src="/assets/images/utilisateur.png" alt="">
 				<div class="flex gap-2 justify-center">
 					<div class="bg-gray-50 p-2 rounded-full border-1 border-gray-400 hover:bg-blue-200 cursor-pointer editUserBtn">
 						<img class="w-5" src="/assets/images/editer.png" alt="">
