--- a/views/pages/dashboard/dashboard.twig
+++ b/views/pages/dashboard/dashboard.twig
@@ -23,32 +23,35 @@
 						<div class="bg-blue-100 rounded-lg py-8 px-10 w-full">
 							<img class="w-16 p-2 mb-6 border border-gray-300 rounded-md" src="/assets/images/outils.png" alt="">
 							<p class="font-semibold text-2xl mb-6">Total outillages perçus</p>
-							<span class="font-semibold text-4xl">100</span>
+							<span class="font-semibold text-4xl">{{toolsWithUser}}</span>
 						</div>
 						<div class="bg-blue-100 rounded-lg py-8 px-10 w-full">
 							<img class="w-16 p-2 mb-6 border border-gray-300 rounded-md" src="/assets/images/utilisateur.png" alt="">
-							<p class="font-semibold text-2xl mb-6">Nombre de mécaniciens emprunteurs</p>
-							<span class="font-semibold text-4xl">100</span>
+							<p class="font-semibold text-2xl mb-6">Nombre d'emprunteurs</p>
+							<span class="font-semibold text-4xl">{{userWithTool}}</span>
 						</div>
 					</div>
 
 				{% endif %}
 
 				<div>
-					<h3 class="font-semibold text-2xl border-b pb-4 mb-6">
-						{% block h3 %}{% endblock %}
-						{% if currentPath == '/dashboard' or currentPath == '/createAeronef'%}Liste des outillages empruntés{% endif %}
-					</h3>
 
-					{% if currentPath == '/dashboard' %}
-						{% include "pages/dashboard/partials/tableDashboard.twig" %}
-					{% endif %}
+					{% if not currentPath == '/schedule' %}
+						<h3 class="font-semibold text-2xl border-b pb-4 mb-6"> {% block h3 %}{% endblock %}
+							</h3>
+						{% endif %}
 
-					{% block content %}{% endblock %}
 
+						{% if currentPath == '/dashboard' or currentPath == '/createAeronef' %}
+							<h3 class="font-semibold text-2xl border-b pb-4 mb-6">Liste des outils empruntés</h3>
+							{% include "pages/dashboard/partials/tableDashboard.twig" %}
+						{% endif %}
+
+						{% block content %}{% endblock %}
+
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
-{% endblock %}
+	{% endblock %}
