--- a/views/pages/dashboard/partials/perception.twig
+++ b/views/pages/dashboard/partials/perception.twig
@@ -13,10 +13,10 @@
 				<input type="hidden" name="userId" value="{{technician.id}}">
 
 				<button type="submit" class="w-full text-left cursor-pointer transition-transform duration-200 ease-in-out hover:-translate-y-1 ">
-					<div class="border border-gray-300 shadow-lg shadow-blue-100 rounded-2xl flex gap-6 py-6 px-7 hover:bg-gray-50">
+					<div class="border border-gray-300 shadow-lg shadow-blue-100 rounded-2xl flex justify-center gap-6 py-6 px-7 hover:bg-gray-50">
 						<div>
 							<div class="w-full flex justify-center">
-								<img class="w-24 h-24 p-2 rounded-full object-cover" src="/assets/images/utilisateur.png" alt="">
+								<img class="w-24 h-24 p-2 rounded-full object-cover" src={{technician.photo}} alt="">
 							</div>
 							<div class="pt-4 flex flex-col">
 								<p class="font-bold text-2xl mb-2">
