--- a/views/pages/dashboard/partials/modal.twig
+++ b/views/pages/dashboard/partials/modal.twig
@@ -14,7 +14,7 @@
 
 		</div>
 
-		<form class="flex flex-col gap-4 mt-6" action="/technicians" method="POST" id="formModal" enctype="multipart/form-data">
+		<form class="flex flex-col gap-4 mt-6" action="/technicians" method="POST" id="formModal">
 
 			<!-- texte pour DB -->
 			{%	if currentPath == '/dashboard' or currentPath == '/technicians' %}
