--- a/views/pages/dashboard/partials/technicians.twig
+++ b/views/pages/dashboard/partials/technicians.twig
@@ -1,6 +1,6 @@
 {% extends "pages/dashboard/dashboard.twig" %}
 {% block h3 %}
-	Liste des techniciens enregistrés
+	<h3 class="font-semibold text-2xl border-b pb-4 mb-6">Liste des techniciens enregistrés</h3>
 {% endblock %}
 
 
