--- a/views/pages/dashboard/partials/tools.twig
+++ b/views/pages/dashboard/partials/tools.twig
@@ -1,5 +1,6 @@
 {% extends "pages/dashboard/dashboard.twig" %}
-{% block h3 %}Liste des outillages
+{% block h3 %}
+	<h3 class="font-semibold text-2xl border-b pb-4 mb-6">Liste des outillages</h3>
 {% endblock %}
 {% block content %}
 
