--- a/views/pages/dashboard/partials/perception.twig
+++ b/views/pages/dashboard/partials/perception.twig
@@ -1,7 +1,7 @@
 {% extends "pages/dashboard/dashboard.twig" %}
 
 {% block h3 %}
-	Liste des techniciens
+	<h3 class="font-semibold text-2xl border-b pb-4 mb-6">Liste des techniciens</h3>
 {% endblock %}
 
 {% block content %}
